welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:12: error: '<-' expected but ')' found.
  for (compteur -> 1 to 2) {
                         ^PatternPicture:28: error: illegal start of simple expression
}
^